--- a/elk.yml
+++ b/elk.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - 12201:12201/udp
     volumes:
-      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro 
+      - logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro 
     networks:
       - logging-network
     x-tinkr:
