--- a/elk.yml
+++ b/elk.yml
@@ -3,6 +3,9 @@ version: "3"
 services: 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
+    x-tinkr:
+      cpu: 1024
+      memory: 2048
     environment: 
       - discovery.type=single-node
       - xpack.security.enabled=false
