--- a/elk.yml
+++ b/elk.yml
@@ -5,7 +5,10 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
     x-tinkr:
       cpu: 1024
-      memory: 4028
+      memory: 3096
+      load_balancer:
+        tenancy: dedicated
+        type: webserver
     environment: 
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -33,6 +36,7 @@ services:
     ports: 
       - 5601:5601
     x-tinkr:
+      memory: 1024
       load_balancer:
         tenancy: dedicated
         type: webserver
