--- a/elk.yml
+++ b/elk.yml
@@ -9,6 +9,7 @@ services:
       load_balancer:
         tenancy: dedicated
         type: webserver
+        healthcheck:
     environment: 
       - discovery.type=single-node
       - xpack.security.enabled=false
