--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -1,3 +1,3 @@
 server.host: "0.0.0.0"
 server.shutdownTimeout: "5s"
-elasticsearch.hosts: [ "$ELASTIC_SEARCH_HOSTS" ]
+elasticsearch.hosts: ["http://$ELASTIC_SEARCH_HOSTS"]
