--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       load_balancer:
         tenancy: dedicated
         type: network
+        network: private
     ports:
       - 9200:9200
     environment: 
@@ -26,7 +27,6 @@ services:
       load_balancer:
         tenancy: dedicated
         type: network
-        network: public
         healthcheck:
           success_code: "200"
       memory: 1024
