--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       memory: 3096
       load_balancer:
         tenancy: dedicated
-        type: webserver
+        type: network
+        network: private
     ports:
       - 9200:9200
     environment: 
@@ -20,34 +21,39 @@ services:
   logstash:
     build:
       context: logstash
-      #dockerfile: logstash.Dockerfile
     depends_on: 
       - elasticsearch
     x-tinkr:
+      load_balancer:
+        tenancy: dedicated
+        type: network
+        healthcheck:
+          success_code: "200"
       memory: 1024
       environment: 
-        -  ELASTIC_SEARCH_HOSTS=<hostname:elasticsearch> 
+        -  ELASTIC_SEARCH_HOSTS=http://<hostname:elasticsearch>:9200
     ports:
-      - 12201:12201/udp
+      #- 12201:12201/udp
+      - 9600:9600
     networks:
       - logging-network
 
   kibana:
-    build:
-      context: kibana
+    image: docker.elastic.co/kibana/kibana:7.17.1
     depends_on:
       - logstash
     ports: 
       - 5601:5601
     x-tinkr:
+      cpu: 1024
       memory: 1024
       environment:
-        - ELASTIC_SEARCH_HOSTS=<hostname:elasticsearch>
+        - ELASTICSEARCH_HOSTS=http://<hostname:elasticsearch>:9200
       load_balancer:
         tenancy: dedicated
         type: webserver
         healthcheck:
-          success_code: "200"
+          success_code: "302"
     networks: 
       - logging-network
 
