--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services: 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
+    volumes:
+      - data:/usr/share/elasticsearch/data
     x-tinkr:
       cpu: 1024
       memory: 3096
@@ -77,3 +79,6 @@ services:
 networks: 
   logging-network:
     driver: bridge
+
+volumes:
+   data:
